RESOLVED FIXED225382
DisplayList::Recorder::appendDrawGraphsItemWithCachedFont is misnamed
https://bugs.webkit.org/show_bug.cgi?id=225382
Summary DisplayList::Recorder::appendDrawGraphsItemWithCachedFont is misnamed
Cameron McCormack (:heycam)
Reported 2021-05-04 22:35:22 PDT
I'm guessing it should be "appendDrawGlyphsItem...".
Attachments
Patch (7.50 KB, patch)
2021-05-04 22:47 PDT, Cameron McCormack (:heycam)
no flags
Cameron McCormack (:heycam)
Comment 1 2021-05-04 22:47:22 PDT
EWS
Comment 2 2021-05-05 15:46:10 PDT
Committed r277047 (237359@main): <https://commits.webkit.org/237359@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 427733 [details].
Radar WebKit Bug Importer
Comment 3 2021-05-05 15:47:27 PDT
Note You need to log in before you can comment on or make changes to this bug.