Rename DisplayList::Recorder::appendDrawGraphsItemWithCachedFont. https://bugs.webkit.org/show_bug.cgi?id=225382

Reviewed by Simon Fraser.

It appends a DrawGlyphsItem, not a DrawGraphsItem.

* platform/graphics/displaylists/DisplayListDrawGlyphsRecorderCoreText.cpp:
(WebCore::DisplayList::DrawGlyphsRecorder::recordDrawGlyphs):
(WebCore::DisplayList::DrawGlyphsRecorder::drawGlyphs):
* platform/graphics/displaylists/DisplayListDrawGlyphsRecorderHarfBuzz.cpp:
(WebCore::DisplayList::DrawGlyphsRecorder::drawGlyphs):
* platform/graphics/displaylists/DisplayListDrawGlyphsRecorderWin.cpp:
(WebCore::DisplayList::DrawGlyphsRecorder::drawGlyphs):
* platform/graphics/displaylists/DisplayListRecorder.cpp:
(WebCore::DisplayList::Recorder::appendDrawGlyphsItemWithCachedFont):
* platform/graphics/displaylists/DisplayListRecorder.h:


Canonical link: https://commits.webkit.org/237359@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277047 268f45cc-cd09-0410-ab3c-d52691b4dbfc